fix navbar collapse

--- a/src/DUPSS.Web/Components/Layout/NavMenu.razor.css
+++ b/src/DUPSS.Web/Components/Layout/NavMenu.razor.css
@@ -96,11 +96,7 @@
     padding-right: 24px;
 }
 
-.collapse.navbar-collapse {
-    height: 550px;
-    display: flex;
-    align-items: center;
-}
+
 
 .navbar-nav {
     height: 100%;
